--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,72 +1,94 @@
-.footer{
-    color: #d9d9d9;
-    background-color: #323232;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 20px 8vw;
-    padding-top: 80px;
-    margin-top: 100px;
+.footer {
+  color: #d9d9d9;
+  background-color: #323232;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding: 20px 8vw;
+  padding-top: 80px;
+  margin-top: 100px;
 }
-.footer-content{
-    width: 100%;
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    gap: 80px;
+.footer-content {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  gap: 80px;
 }
-.footer-content-left , .footer-content-right , .footer-content-center {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    gap: 20px;
+.footer-content-left,
+.footer-content-right,
+.footer-content-center {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 20px;
 }
-.footer-content-left li, .footer-content-right li, .footer-content-center li {
-    list-style: none;
-    margin-bottom: 10px;
-    cursor: pointer;
+.footer-content-left li,
+.footer-content-right li,
+.footer-content-center li {
+  list-style: none;
+  margin-bottom: 10px;
+  cursor: pointer;
+  align-items: center;
+  display: flex;
 }
-.footer-content-right h2, .footer-content-center h2 {
-    color: white;
+.footer-content-center li {
+  transition: all 0.3s ease;
 }
-.footer-social-icons img{
-    cursor: pointer;
-    width: 40px;
-    margin-right: 15px;
-    border-radius: 50%;
+
+.footer-content-center li:hover {
+  transform: scale(1.1);
+  color: orangered;
 }
-.footer hr{
-    width: 100%;
-    height: 2px;
-    margin: 20px 0;
-    background-color: grey;
-    border: none;
+
+.footer-content-right h2,
+.footer-content-center h2 {
+  color: white;
+}
+
+.footer hr {
+  width: 100%;
+  height: 2px;
+  margin: 20px 0;
+  background-color: grey;
+  border: none;
+}
+
+.footer-social-icons a {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.2rem;
+  transition: all 0.3s ease;
+}
+
+.footer-social-icons a:hover {
+  transform: scale(1.5);
 }
 
 :root .footer {
-    background-color: #252323;
+  background-color: #252323;
 }
 
 .lightcolors .footer {
-    background-color: #323232;
+  background-color: #323232;
 }
 
 :root .tomatologofooter {
-    filter: var(--logos-filter); 
+  filter: var(--logos-filter);
 }
 
 .lightcolors .tomatologofooter {
-    filter: none; 
+  filter: none;
 }
 
-
-@media (max-width:750px) {
-    .footer-content{
-        display: flex;
-        flex-direction: column;
-        gap: 35px;
-    }
-    .footer-copyright{
-        text-align: center;
-    }
+@media (max-width: 750px) {
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+  }
+  .footer-copyright {
+    text-align: center;
+  }
 }
